--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="/Users/barmoshe/Downloads/assignment1files/Submission.jar"/>
 	<classpathentry kind="lib" path="/Users/barmoshe/Downloads/assignment1files/Assignment1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/FSM"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
